fix: hidden overflow-x

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -361,6 +361,7 @@
 @media (max-width: 768px) {
   .container {
     padding: 1.25rem 1.5rem;
+    overflow-x: hidden;
 
     header {
       h2 {
